auto-test/tests/chapter_18/invalid_struct_tags/return_type_undeclared.c
void exit(int status);




struct s foo(void) {
    exit(0);
}